# MADS-ML-YouriD

./: .pdm-python  pyproject.toml
dev/models/rnn/20240930-144002/: events.out.tfevents.1727700004.INN-VEE-LT894.13264.0  saved_config.gin
dev/models/rnn/20240930-144008/: events.out.tfevents.1727700008.INN-VEE-LT894.13264.1
dev/notebooks/: 05_image_classfication.ipynb
dev/notebooks/1_pytorch_intro/: 01_tensors.ipynb  02_datagenerators.ipynb  06_exercises.ipynb
dev/notebooks/1_pytorch_intro/modellogs/20240923-085958/: events.out.tfevents.1727074822.INN-VEE-LT894.18220.0
dev/notebooks/1_pytorch_intro/modellogs/20240923-155057/: events.out.tfevents.1727099457.INN-VEE-LT894.15024.11
dev/notebooks/1_pytorch_intro/modellogs/20240923-161024/: events.out.tfevents.1727100624.INN-VEE-LT894.15024.16  saved_config.gin
dev/notebooks/1_pytorch_intro/modellogs/20240923-162636/: events.out.tfevents.1727101596.INN-VEE-LT894.15024.18
dev/notebooks/1_pytorch_intro/modellogs/20240923-180653/: events.out.tfevents.1727107615.INN-VEE-LT894.7932.0
dev/notebooks/1_pytorch_intro/modellogs/20240923-181119/: events.out.tfevents.1727107879.INN-VEE-LT894.7932.1
dev/notebooks/1_pytorch_intro/modellogs/20240923-181345/: events.out.tfevents.1727108025.INN-VEE-LT894.7932.2
dev/notebooks/1_pytorch_intro/modellogs/20240923-181800/: events.out.tfevents.1727108280.INN-VEE-LT894.7932.3
dev/notebooks/4_tuning_networks/: 02_hypertuner.ipynb
references/notes/: 2024-09-30_notes.md  2024_09_16_notes.md
src/mads_uos3_youri/: __init__.py
(+8 files in other folders)
