[project]
name = "mads-uos3-youri"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ydibbet", email = "yjm.dibbet@student.han.nl" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.rye]
managed = true
dev-dependencies = []
