[project]
name = "mads-uos3-youri"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ydibbet", email = "yjm.dibbet@student.han.nl" }
]
dependencies = [
    "ipykernel>=6.29.5",
    "mads-datasets>=0.3.12",
    "mltrainer>=0.1.128",
    "plotly>=5.24.1",
    "seaborn>=0.13.2",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.rye]
managed = true
dev-dependencies = []

[tool.pdm]
